--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "My Mern stact starter kit",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "node server.js"
   },
   "author": "TRINITY",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.26"
   }
