--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
-  "name": "mern_starter",
+  "name": "mern-starter-plate",
   "version": "1.0.0",
-  "description": "My Mern stact starter kit",
+  "description": "mern boiler plate",
   "main": "server.js",
+  "engine": {
+    "node": "10.16.0",
+    "npm": "6.9.0"
+  },
   "scripts": {
-    "backend": "node server.js"
+    "start": "node server/server.js",
+    "backend": "nodemon server/server.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "author": "TRINITY",
   "license": "MIT",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
+    "bcrypt": "^3.0.8",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
-    "mongoose": "^5.9.26"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.20",
+    "react-redux": "^5.1.2",
+    "saslprep": "^1.0.3",
+    "supports-color": "^7.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.1"
   }
 }
